# komorebi

./: meson.build
data/: com.github.cheesecakeufo.Komorebi.appdata.xml  com.github.cheesecakeufo.Komorebi.desktop  com.github.cheesecakeufo.WallpaperCreator.desktop  com.github.cheesecakeufo.WallpaperCreator.gresource.xml  komorebi.desktop  meson.build  wallpapercreator.desktop
data/icons/: meson.build
data/other/: postrm
data/ui/wallpaper-creator/: about_dialog.ui  edit_screen.ui  finish_screen.ui  init_screen.ui  window.ui
extra/: meson.build
extra/wallpaper-creator/: about.vala  application.vala  edit-screen.vala  finish-screen.vala  init-screen.vala  meson.build  wallpaper.vala  window.vala
src/: meson.build
